k8s/sample/sample.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: sample
  name: sample
  namespace: sample
spec:
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - args: ["-listen=:80", "-text=sample"]
        image: hashicorp/http-echo:0.2.3
        name: sample
        ports:
        - containerPort: 80
      terminationGracePeriodSeconds: 0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample
  name: sample
  namespace: sample
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: sample
