k8s/sample/sample-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample
  namespace: sample
spec:
  gateways:
  - igw.istio-system
  hosts:
  - sample.sample
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: sample.sample.svc.cluster.local
